# sound_categorisation

./: .gitignore  0_BE_interactive_update_matrix_explorer.ipynb  1.BE_foundations_behaviour.ipynb  1_synthetic_data_exploration.ipynb  2.BE_interactive_update_matrix_explorer.ipynb  2_stat_param_sensitivity.ipynb  3_hmm_state_discovery.ipynb  4_sbi_inference.ipynb  BE_point_estimate_analysis.ipynb  BE_recovery_analysis.ipynb  README.md  Research_Proposal_PPC_Dynamic_Engagement.md  SBI_analysis.ipynb  SC_model.ipynb  SETUP.md  config.yaml  config_cluster.yaml  config_slurm.yaml  conftest.py  feature_analysis.ipynb  model_comparison.ipynb  run_cv_single.py  smoke_test.py  submit_cv.sh  tests.py
behav_utils/: LICENSE  README.md  __init__.py  pyproject.toml
behav_utils/analysis/: __init__.py  comparison.py  downsample.py  group.py  psychometry.py  session_features.py  session_raster.py  stats_table.py  summary_stats.py  trajectory.py  update_matrix.py
behav_utils/config/: __init__.py  schema.py
behav_utils/config_presets/: config_full_reference.yaml  config_minimal.yaml  multisensory_integration.yaml  pavlovian_conditioning.yaml  sound_categorisation.yaml
behav_utils/configs/: orientation_discrimination.yaml
behav_utils/data/: __init__.py  filtering.py  loading.py  neural.py  selection.py  structures.py  synthetic.py
behav_utils/docs/: config_guide.md  data_structures_reference.md  summary_stats_reference.md
behav_utils/notebooks/: example_workflow.ipynb
behav_utils/plotting/: __init__.py  comparison.py  psychometric.py  session.py  styles.py  trajectory.py  (+1 more)
(+289 files in other folders)
